[metadata]
name = xenix
version = 0.1.0
description = A package manager with tons of features made in Python.
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = manager, package
author = "FrostiiWeeb"
license = GPL-3.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    aioconsole

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
exclude =
    scripts*